# littlesheens

./: .gitignore  CMakeLists-ExternalProjects.txt  CMakeLists.txt  CMakeLists.txt-duktape  Dockerfile  Makefile  README.md  demo.c  demo.js  demo.sh  driver.c  driver.js  littlegears.md  littlegears.sh  machines.c  machines.h  machines_js.h  main.c  match_test.js  nodemodify.sh  objects.c  sheens-perf.sh  sheens.c  sheens.sh  sheensio-demo.sh  sheensio.c  util.c  util.h
js/: match.js  prof.js  sandbox.js  step.js
lib/: fsc.js  util.js
misc/: match.lua
specs/: base.yaml  common.yaml  door.yaml  double.yaml  flow_meta_data.yaml  light.yaml  parent.yaml  retry.yaml  trigger.yaml  turnstile.yaml
test/: Makefile  README.md  test.go  test_test.go
